[gd_scene load_steps=3 format=3 uid="uid://dh20afsdwgovh"]

[ext_resource type="Script" uid="uid://bs6qjqjutdo1s" path="res://scenes/components/Hurtbox/hurtbox.gd" id="1_g4jrb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hlgx5"]
radius = 15.0

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_g4jrb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hlgx5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
